@@ -1,3 +1,8 @@
+2000-05-08  Alan Modra  <alan@linuxcare.com.au>
+
+	* m68k-dis.c (dummy_printer): Add ATTRIBUTE_UNUSED to args.
+	(dummy_print_address): Ditto.
+
 2000-05-04  Timothy Wall  <twall@cygnus.com>
 
 	* tic54x-opc.c: New.
